# AgentOBSValidate

./: .gitignore  README.md  agentobsvalidatespec.md  implementationplan.md  pyproject.toml
.github/workflows/: tests.yml  validate.yml
examples/: .gitkeep  invalid.jsonl  valid.json  valid.jsonl
src/agentobs_validate/: __init__.py
src/agentobs_validate/cli/: __init__.py  main.py
src/agentobs_validate/errors/: __init__.py  codes.py  models.py
src/agentobs_validate/schema/: __init__.py  fields.py  json_schema.py  patterns.py
src/agentobs_validate/validator/: __init__.py  context.py  engine.py  field_validators.py  formatters.py  input_parser.py  results.py
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_errors.py  test_examples.py  test_field_validators.py  test_formatters.py  test_input_parser.py  test_scaffold.py  test_schema.py
tests/benchmarks/: bench_throughput.py  gen_events.py
